# docs/swagger.yaml
@@ -251,23 +251,6 @@ paths:
       tags:
       - Book
   /api/collection:
-    delete:
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.ResponseSuccess'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.ResponseError'
-      tags:
-      - CollectionController
-  /api/collection/{id}:
     get:
       consumes:
       - application/json
@@ -287,16 +270,74 @@ paths:
       summary: Authenticate a user and generate a token
       tags:
       - CollectionController
+  /api/collection/check/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Authenticate a user and generate a token based on the provided
+        credentials.
+      parameters:
+      - description: Book ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ResponseSuccess'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ResponseError'
+      summary: Authenticate a user and generate a token
+      tags:
+      - CollectionController
+  /api/collection/create/{id}:
     post:
       consumes:
       - application/json
+      description: Authenticate a user and generate a token based on the provided
+        credentials.
       parameters:
+      - description: Book ID
+        in: path
+        name: id
+        required: true
+        type: integer
       - description: Request
         in: body
         name: request
         required: true
         schema:
           $ref: '#/definitions/request.CollectionRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ResponseSuccess'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ResponseError'
+      summary: Authenticate a user and generate a token
+      tags:
+      - CollectionController
+  /api/collection/delete/{id}:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: Book ID
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -451,6 +492,33 @@ paths:
           schema:
             $ref: '#/definitions/response.ResponseError'
       summary: Authenticate a user and generate a token
+      tags:
+      - Lendings
+  /api/lending/delete/{id}:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: Lendings ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ResponseDataSuccess'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ResponseError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.ResponseError'
       tags:
       - Lendings
   /api/lending/history/{id}:
